--- a/app/src/main/res/layout/template_station_nearby.xml
+++ b/app/src/main/res/layout/template_station_nearby.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?selectableItemBackground"
+    android:background="?selectableItemBackground"
     android:orientation="vertical"
     app:cardElevation="2dp">
 
