--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
 
     <color name="color_main_green">#75E645</color>
     <color name="color_main_blue">#45BEE6</color>
+    <color name="color_main_blue_dark">#3ca1c2</color>
     <color name="color_main_yellow">#F7FF00</color>
     <color name="color_main_background">#66FFFFFF</color>
     <color name="color_main_gray">#534F4F</color>
