--- a/app/src/main/res/drawable/bus_pointer_circle.xml
+++ b/app/src/main/res/drawable/bus_pointer_circle.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/colorAccent" />
     <stroke android:width="1dp"
         android:color="@color/color_black"/>
 
