--- a/app/src/main/res/drawable/ic_bus_24dp.xml
+++ b/app/src/main/res/drawable/ic_bus_24dp.xml
@@ -5,5 +5,7 @@
         android:viewportHeight="24.0">
     <path
         android:fillColor="@color/colorAccent"
-        android:pathData="M12,2L4.5,20.29l0.71,0.71L12,18l6.79,3 0.71,-0.71z"/>
+        android:pathData="M12,2L4.5,20.29l0.71,0.71L12,18l6.79,3 0.71,-0.71z"
+        android:strokeColor="@color/color_black"
+        android:strokeWidth="1.0"/>
 </vector>
